@@ -3,11 +3,11 @@ package auth.oidc;
 import static com.google.common.base.Preconditions.checkNotNull;
 
 import auth.CiviFormProfileData;
+import com.google.common.collect.ImmutableMap;
 import com.nimbusds.openid.connect.sdk.LogoutRequest;
 import com.typesafe.config.Config;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.util.Map;
 import java.util.Optional;
 import org.pac4j.core.context.WebContext;
 import org.pac4j.core.context.session.SessionStore;
@@ -18,46 +18,58 @@ import org.pac4j.core.util.CommonHelper;
 import org.pac4j.core.util.HttpActionHelper;
 import org.pac4j.oidc.config.OidcConfiguration;
 import org.pac4j.oidc.logout.OidcLogoutActionBuilder;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
-public class CiviformOidcLogoutActionBuilder extends OidcLogoutActionBuilder {
-  private static final Logger logger =
-      LoggerFactory.getLogger(CiviformOidcLogoutActionBuilder.class);
+/**
+ * Custom OidcLogoutActionBuilder for CiviFormProfileData (since it extends CommonProfile, not
+ * OidcProfile). Also allows for divergence from the [oidc
+ * spec](https://openid.net/specs/openid-connect-rpinitiated-1_0.html) if your provider requires it
+ * (e.g. Auth0).
+ *
+ * <p>Does not provide the recommended id_token_hint, since these are not stored by the civiform
+ * profile.
+ *
+ * <p>Uses the post_logout_redirect_uri parameter by default, but allows overriding to a different
+ * value using the auth.oidc_post_logout_param config variable
+ *
+ * <p>If the oidc_logout_client_id_param config variable is set, also adds the client_id to the
+ * logout request.
+ */
+public final class CiviformOidcLogoutActionBuilder extends OidcLogoutActionBuilder {
 
-  protected final Config civiformConfiguration;
-  protected final Optional<String> postLogoutRedirectParam;
-  protected final Map<String, String> extraParams;
-  protected final String baseUrl;
+  private final Optional<String> postLogoutRedirectParam;
+  private final ImmutableMap<String, String> extraParams;
 
   public CiviformOidcLogoutActionBuilder(
       Config civiformConfiguration, final OidcConfiguration oidcConfiguration, String clientID) {
     super(oidcConfiguration);
-    this.civiformConfiguration = checkNotNull(civiformConfiguration);
-    this.postLogoutRedirectParam = getConfigurationValue("auth.oidc_post_logout_param");
-    Optional<String> clientIdParam = getConfigurationValue("auth.oidc_logout_client_id_param");
+    checkNotNull(civiformConfiguration);
+    this.postLogoutRedirectParam =
+        getConfigurationValue(civiformConfiguration, "auth.oidc_post_logout_param");
+    Optional<String> clientIdParam =
+        getConfigurationValue(civiformConfiguration, "auth.oidc_logout_client_id_param");
 
     if (clientIdParam.isPresent()) {
-      this.extraParams = Map.of(clientIdParam.get(), clientID);
+      this.extraParams = ImmutableMap.of(clientIdParam.get(), clientID);
     } else {
-      this.extraParams = Map.of();
+      this.extraParams = ImmutableMap.of();
     }
-
-    this.baseUrl =
-        getConfigurationValue("base_url")
-            .orElseThrow(() -> new RuntimeException("base_url must be set"));
   }
 
   /** Helper function for retriving values from the application.conf, */
-  protected final Optional<String> getConfigurationValue(String name) {
+  protected static final Optional<String> getConfigurationValue(
+      Config civiformConfiguration, String name) {
     if (civiformConfiguration.hasPath(name)) {
       return Optional.ofNullable(civiformConfiguration.getString(name));
     }
     return Optional.empty();
   }
 
-  // Override, since parent checks that the profile is an instance of OidcProfile.
-  // Does not supply idtoken hint.
+  /**
+   * Override the parent's getLogoutAction, since it check that the profile is an instance of
+   * OidcProfile, and uses fields we don't have access to. Generally keeps the same basic logic.
+   *
+   * <p>Also use the custom CustomOidcLogoutRequest to build the URL.
+   */
   @Override
   public Optional<RedirectionAction> getLogoutAction(
       final WebContext context,
@@ -65,17 +77,15 @@ public class CiviformOidcLogoutActionBuilder extends OidcLogoutActionBuilder {
       final UserProfile currentProfile,
       final String targetUrl) {
     final String logoutUrl = configuration.findLogoutUrl();
-    logger.debug("Logging user out: " + currentProfile.toString());
     if (CommonHelper.isNotBlank(logoutUrl) && currentProfile instanceof CiviFormProfileData) {
       try {
         final URI endSessionEndpoint = new URI(logoutUrl);
         LogoutRequest logoutRequest =
             new CustomOidcLogoutRequest(
                 endSessionEndpoint,
-                this.postLogoutRedirectParam.orElse(null),
+                postLogoutRedirectParam.orElse(null),
                 new URI(targetUrl),
-                this.extraParams);
-        logger.debug("logoutRequest: " + logoutRequest.toURI().toString());
+                extraParams);
 
         return Optional.of(
             HttpActionHelper.buildRedirectUrlAction(context, logoutRequest.toURI().toString()));
