@@ -1,6 +1,7 @@
 package auth.oidc;
 
 import com.google.common.base.Strings;
+import com.google.common.collect.ImmutableMap;
 import com.nimbusds.openid.connect.sdk.LogoutRequest;
 import java.net.URI;
 import java.util.Collections;
@@ -8,13 +9,28 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
-public class CustomOidcLogoutRequest extends LogoutRequest {
-  /** The optional post-logout redirection param and URI. */
+/**
+ * Custom Logout Request that allows for divergence from the [oidc
+ * spec](https://openid.net/specs/openid-connect-rpinitiated-1_0.html) if your provider requires it
+ * (e.g. Auth0).
+ *
+ * <p>Does not provide the recommended id_token_hint, since these are not stored by the civiform
+ * profile.
+ *
+ * <p>Uses the post_logout_redirect_uri parameter by default, but allows overriding to a different
+ * value
+ *
+ * <p>Allows adding extra custom query parameters to the URL.
+ */
+public final class CustomOidcLogoutRequest extends LogoutRequest {
+  /** The optional post-logout redirection query param. */
   private final String postLogoutRedirectParam;
 
+  /** The optional post-logout redirection URI. */
   private final URI postLogoutRedirectURI;
 
-  private final Map<String, String> extraParams;
+  /** Pptional extra query params to add to the URL. */
+  private final ImmutableMap<String, String> extraParams;
 
   /**
    * Create new OIDC logout request with a optional redirect url, optional client id, and other
@@ -24,7 +40,7 @@ public class CustomOidcLogoutRequest extends LogoutRequest {
       final URI uri,
       final String postLogoutRedirectParam,
       final URI postLogoutRedirectURI,
-      final Map<String, String> extraParams) {
+      final ImmutableMap<String, String> extraParams) {
 
     super(uri, /* idTokenHint */ null, postLogoutRedirectURI, /* state */ null);
 
@@ -36,7 +52,7 @@ public class CustomOidcLogoutRequest extends LogoutRequest {
     }
     this.postLogoutRedirectURI = postLogoutRedirectURI;
     if (extraParams == null) {
-      this.extraParams = Map.of();
+      this.extraParams = ImmutableMap.of();
     } else {
       this.extraParams = extraParams;
     }
@@ -49,7 +65,7 @@ public class CustomOidcLogoutRequest extends LogoutRequest {
   }
 
   /** Creates a new OIDC logout request without a post-logout redirection. */
-  public CustomOidcLogoutRequest(final URI uri, final Map<String, String> extraParams) {
+  public CustomOidcLogoutRequest(final URI uri, final ImmutableMap<String, String> extraParams) {
 
     this(uri, /* postLogoutRedirectParam */ null, /* postLogoutRedirectURI */ null, extraParams);
   }
